# ros_tutorials

./: .gitignore  .gitmodules  README.md
basics/examples/kobuki_bumpgo/: CMakeLists.txt  package.xml
basics/examples/kobuki_mover/: CMakeLists.txt  package.xml
basics/msgs_creation/ros_tutorials_msgs/: CMakeLists.txt  package.xml
basics/roscpp/simple_pub/: CMakeLists.txt  package.xml
basics/roscpp/simple_sub/: CMakeLists.txt  package.xml
basics/rospy/simple_pub_py/: CMakeLists.txt  package.xml
basics/rospy/simple_sub_py/: CMakeLists.txt  package.xml
bump_and_go/: CMakeLists.txt  package.xml
bump_and_go/src/: bump_and_go.cpp
follow_line/src/: follow_line_node.cpp
nodo_simple_py/: package.xml
nodo_simple_py/src/: publisher_simple_node.py
real/bump_and_go/: CMakeLists.txt  package.xml
real/darknet_ros_3d_trial/: CMakeLists.txt  package.xml
real/darknet_ros_3d_trial/src/: darknet3d_trial_node.cpp
real/follow_line/: CMakeLists.txt  package.xml
real/kobuki_remote_control/: CMakeLists.txt  package.xml
real/kobuki_remote_control/src/: kobuki_controller_node.cpp
real/nodo_simple_py/: CMakeLists.txt
real/nodo_simple_py/launch/: nodo_simple_py.launch
real/nodo_simple_py/src/: kobuki_vel_publisher_node.cpp  subscriber_simple_node.py
real/point_transformation_example/: CMakeLists.txt  package.xml
real/pointcloud_transformation_example/: package.xml
real/turtlebot_real/: CMakeLists.txt  package.xml
sim/first_robot_gazebo/: CMakeLists.txt  package.xml
sim/turtlebot_sim_gui/: CMakeLists.txt  package.xml
(+60 files in other folders)
